Add solutions of 20210118

--- a/20210118/Makefile
+++ b/20210118/Makefile
@@ -4,7 +4,7 @@ OUTDIR = output
 TESTDIR = testdata
 TESTOUT = testoutput
 CC = g++
-CFLAGS = 
+CFLAGS = --std=c++11 
 
 SRCS = $(wildcard $(SRCDIR)/*.cpp)
 EXECS = $(patsubst $(SRCDIR)%.cpp, %, $(SRCS))
